...
        frontImageView.image = UIImage()
        frontImageView.contentMode = .scaleAspectFit
        backImageView.image = UIImage()
        backImageView.contentMode = .scaleAspectFit
        
        // Tests
        backImageView.image?.accessibilityIdentifier = "POSTER"
    }
    
    private func applyLayout() {
        [frontImageView, backImageView].forEach { item in
            item.translatesAutoresizingMaskIntoConstraints = false
            addSubview(item)
...
